public/css/admin.css
.content {
    display: block;
    margin: 0 0 100px 0;
}

.buttons {
    display: flex;
    justify-content: space-between;
    text-align: right;
}

.buttons button {
    position: relative;
    top: -1px;
    left: -1px;
    margin: 0 0 30px 0;
    padding: 10px 18px;
    font-family: var(--font-title), var(--font-fallback);
    font-weight: 700;
    font-size: 14px;
    line-height: 14px;
    color: var(--brightest);
    background-color: var(--accent-color);
    border-radius: 5px;
    box-shadow: 2px 2px 2px var(--shadow);
}

.buttons button svg {
    margin: 0 10px 0 0;
    width: 18px;
    height: 18px;
    vertical-align: text-top;
    fill: currentColor;
}

.buttons button:hover,
.buttons button:focus {
    background-color: var(--accent-color-dark);
}

.buttons button:active {
    top: 0;
    left: 0;
    background-color: var(--accent-color-darker);
    box-shadow: 1px 1px 1px var(--shadow);
}

.content ul {
    border: 1px solid var(--darkest);
}

.page_entry {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    margin: 10px;
    height: 40px;
    line-height: 40px;
    background-color: var(--brighter);
    border-radius: 5px;
    user-select: none;
    cursor: pointer;
}

.page_entry div {
    min-width: 250px;
    color: var(--darkest);
}

.page_entry div:first-child {
    min-width: 32px;
    cursor: grab;
    /*row-resize;*/
}

.page_entry div:first-child svg {
    margin: 0 15px;
    width: 16px;
    height: 16px;
    vertical-align: middle;
}

.page_entry div:last-child {
    flex-grow: 2;
}

#d0 {
    display: flex;
    width: 600px;
    min-width: 300px;
    height: 400px;
    min-height: 300px;
    resize: both;
}

#d0::-webkit-resizer {
    display: none;
}

#d0 svg {
    position: absolute;
    right: 0;
    bottom: 0;
    width: 10px;
    height: 10px;
    margin: 0 5px 5px 0;
}

#d0 form {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    min-height: 300px;
}

#d0 label {
    display: flex;
    flex-direction: row;
    color: var(--darkest);
    text-shadow: 1px 1px 2px var(--bright);
    line-height: 0;
}

#d0 label:last-of-type {
    display: flex;
    flex-direction: column;
    flex-grow: 3;
}

#d0 label span {
    display: inline-block;
    min-width: 60px;
}

#d0 label p,
#d0 label span {
    user-select: none;
    line-height: 32px;
}

#d0 label input {
    flex-grow: 2;
    padding: 2px 5px;
    height: 18px;
    align-self: center;
}

#d0 label input,
#d0 label div {
    display: inline-block;
}

#d0 label textarea {
    padding: 5px;
    width: 100%;
    height: 100%;
    color: var(--darkest);
    text-align: left;
    background-color: transparent;
    border: 0;
    resize: none;
    cursor: auto;
    box-sizing: border-box;
}

#d0 label input,
#d0 label textarea {
    font-family: var(--font-normal), var(--font-fallback);
    font-weight: 400;
    color: var(--darkest);
    background-color: var(--brightest);
    border: 1px inset var(--brighter);
    border-radius: 4px;
    text-align: left;
}

#d0 label div {
    padding: 0;
    width: 100%;
    height: 100%;
}

#d0 .buttons {
    justify-content: space-around;
}

#d0 button {
    margin: 10px 0 5px 0;
}

